add https instead of http

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ricardo Spear</title>
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" media="all">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" media="all">
   <style>
     body {
       font-family: 'Lato';
-      background-image: url("http://cdn.backgroundhost.com/backgrounds/subtlepatterns/snow.png");
+      background-image: url("https://cdn.backgroundhost.com/backgrounds/subtlepatterns/snow.png");
     }
 
     .oswald-font {
