change summary to highlights

--- a/index.html
+++ b/index.html
@@ -149,10 +149,7 @@
             Web Programmer/Analyst Senior •
             <a target="_blank" href="" class="company">Adventist Health System</a>
           </h3>
-          <p class="text-muted text-justify">Assist in the development of HelloWell, a consumer facing EMR portal, as a programmer and analyst.Mentor developers
-            in order for them to grow outside their comfort zone.Implement automated Unit Testing and System Testing to improve
-            reliability.Support complex marketing websites with thousands of pages while maintaining reliability and quality.Technologies:
-            Symfony, React, jQuery, Drupal</p>
+          <p class="text-muted text-justify"></p>
           <ul>
           </ul>
         </div>
@@ -164,13 +161,16 @@
             Software Developer at AAA •
             <a target="_blank" href="" class="company">TEKsystems</a>
           </h3>
-          <p class="text-muted text-justify">Assisted in the development of an Order Management System (OMS) where shops can create orders or receive orders
-            via API. Developed using NodeJs, ReactJs and MongoDB. Optimized an Excel generating module which had severe memory
-            limitations. We could originally write up to 50 thousand records without consuming vast amounts of memory, after
-            optimization we could write more than 3 million records.Discovered serious session bugs by looking through the
-            codes, proposed changes and helped implement them along with the team lead.Unit Tested small critical portions
-            of the application.</p>
+          <p class="text-muted text-justify"></p>
           <ul>
+            <li class="text-justify">Assisted in the development of an Order Management System (OMS) where shops can create orders or receive orders
+              via API. Developed using NodeJs, ReactJs and MongoDB. </li>
+            <li class="text-justify">Optimized an Excel generating module which had severe memory limitations. We could originally write up to 50
+              thousand records without consuming vast amounts of memory, after optimization we could write more than 3 million
+              records.</li>
+            <li class="text-justify">Discovered serious session bugs by looking through the codes, proposed changes and helped implement them along
+              with the team lead.</li>
+            <li class="text-justify">Unit Tested small critical portions of the application.</li>
           </ul>
         </div>
       </div>
@@ -181,28 +181,12 @@
             PHP Developer •
             <a target="_blank" href="" class="company">BMI Elite</a>
           </h3>
-          <p class="text-muted text-justify">Helped develop and Order management system utilizing Laravel and AngularJs with a small Node server which enabled
-            real-time data.Refactored and migrated to angular a query builder which generated a user friendly interface from
-            a complex configuration array containing over 200 data points and over 1000 possible values.</p>
+          <p class="text-muted text-justify"></p>
           <ul>
-          </ul>
-        </div>
-      </div>
-      <div class="row item">
-        <div class="col-xs-2 text-right">Oct&nbsp;2014 – present</div>
-        <div class="item-detail col-xs-10">
-          <h3>
-            Founder •
-            <a target="_blank" href="" class="company">BeeSeen Media LLC</a>
-          </h3>
-          <p class="text-muted text-justify">Filed a patent in 2015 for a method to provide customers with a new experience by allowing a customer representative
-            to dynamically insert/replace content via ajax calls. This allows customer representatives to display product/diagnostic
-            information without requiring the customer to take action.Developed (Currently in beta) a social network managing
-            platform called Social Ninjas which allows customers to schedule posts onto many Social Media sites, built using
-            Laravel and other repositories. The innovation is that, by using a complex system, Social Ninja has the capability
-            to make posts on Instagram on behalf of the user. Developed and released an Android app called Zero Taboos which
-            is built using Ionic Framework and a PHP backend.</p>
-          <ul>
+            <li class="text-justify">Helped develop and Order management system utilizing Laravel and AngularJs with a small Node server which enabled
+              real-time data.</li>
+            <li class="text-justify">Refactored and migrated to angular a query builder which generated a user friendly interface from a complex configuration
+              array containing over 200 data points and over 1000 possible values.</li>
           </ul>
         </div>
       </div>
@@ -213,12 +197,14 @@
             Operations Associate/International Allocations •
             <a target="_blank" href="" class="company">ConvergEx Group</a>
           </h3>
-          <p class="text-muted text-justify">Achieved increased capacity and accuracy in both US and Global operations with technological solutions.Simplified
-            processes to create reports monitored by FINRA.Utilized data from multiple systems to identify discrepancies
-            and potential payment problems.Designed and implemented databases and relationships using SQL to discover discrepancies
-            between duties owed/paid to reduce over payments and fines.Assembled critical data when regulatory changes took
-            place.</p>
+          <p class="text-muted text-justify"></p>
           <ul>
+            <li class="text-justify">Achieved increased capacity and accuracy in both US and Global operations with technological solutions.</li>
+            <li class="text-justify">Simplified processes to create reports monitored by FINRA.</li>
+            <li class="text-justify">Utilized data from multiple systems to identify discrepancies and potential payment problems.</li>
+            <li class="text-justify">Designed and implemented databases and relationships using SQL to discover discrepancies between duties owed/paid
+              to reduce over payments and fines.</li>
+            <li class="text-justify">Assembled critical data when regulatory changes took place.</li>
           </ul>
         </div>
       </div>
@@ -229,9 +215,10 @@
             PedidosRA Founder •
             <a target="_blank" href="" class="company">PedidosRA</a>
           </h3>
-          <p class="text-muted text-justify">Attempted to jumpstart online transportation retailing services to conduct B2C transactions for bus transportation
-            companies</p>
+          <p class="text-muted text-justify"></p>
           <ul>
+            <li class="text-justify">Attempted to jumpstart online transportation retailing services to conduct B2C transactions for bus transportation
+              companies</li>
           </ul>
         </div>
       </div>
@@ -571,8 +558,8 @@
     </div>
   </div>
 
-  <link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
 
 
 </body>
