--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@
           </h3>
           <p class="text-muted text-justify"></p>
           <ul>
+            <li class="text-justify">Assist in the development of HelloWell, a consumer facing EMR portal, as a programmer and analyst.</li>
+            <li class="text-justify">Mentor developers in order for them to grow outside their comfort zone.</li>
+            <li class="text-justify">Implement automated Unit Testing and System Testing to improve reliability.</li>
+            <li class="text-justify">Support complex marketing websites with thousands of pages while maintaining reliability and quality.</li>
+            <li class="text-justify">Technologies: Symfony, React, jQuery, Drupal</li>
           </ul>
         </div>
       </div>
